--- a/app/src/main/res/layout/fragment_employee_details.xml
+++ b/app/src/main/res/layout/fragment_employee_details.xml
@@ -29,7 +29,7 @@
 
     <TextView
         android:id="@+id/userNameTxtVw"
-        android:layout_width="56dp"
+        android:layout_width="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_height="20dp"
         app:layout_constraintStart_toStartOf="@+id/nameTxtVw"
@@ -37,7 +37,7 @@
 
     <TextView
         android:id="@+id/emailTxtVw"
-        android:layout_width="56dp"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="@+id/nameTxtVw"
@@ -46,7 +46,7 @@
 
     <TextView
         android:id="@+id/adressTxtVw"
-        android:layout_width="56dp"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="@+id/nameTxtVw"
@@ -54,7 +54,7 @@
 
     <TextView
         android:id="@+id/phoneTxtVw"
-        android:layout_width="56dp"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="@+id/nameTxtVw"
@@ -63,7 +63,7 @@
 
     <TextView
         android:id="@+id/websiteTxtVw"
-        android:layout_width="56dp"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="@+id/nameTxtVw"
@@ -72,7 +72,7 @@
 
     <TextView
         android:id="@+id/detailsTxtVw"
-        android:layout_width="56dp"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
